--- a/web/index.html
+++ b/web/index.html
@@ -350,8 +350,8 @@
                     <input class="form-control" id="txtCusAddress" placeholder="Customer Address" type="text">
                 </div>
                 <div class="mb-3">
-                    <label class="form-label" for="txtCusTP">Customer Tp</label>
-                    <input class="form-control" id="txtCusTP" placeholder="Customer Tp" type="text">
+                    <label class="form-label" for="txtCusSalary">Customer Salary</label>
+                    <input class="form-control" id="txtCusSalary" placeholder="Customer Salary" type="text">
                 </div>
             </div>
         </section>
@@ -363,7 +363,7 @@
                         <th>Customer ID</th>
                         <th>Customer Name</th>
                         <th>Customer Address</th>
-                        <th>Customer Mobile</th>
+                        <th>Customer Salary</th>
                     </tr>
                     </thead>
                     <tbody id="customerTable">
@@ -379,5 +379,6 @@
 <script src="assets/bootstarp/js/bootstrap.bundle.min.js"></script>
 <script src="assets/js/jquery-3.6.0.min.js"></script>
 <script src="assets/js/script.js"></script>
+<script src="assets/js/customerScript.js"></script>
 </body>
 </html>
