--- a/web/index.html
+++ b/web/index.html
@@ -178,7 +178,6 @@
             </div>
 
 
-
             <div class="col bg-white m-4 pb-4">
 
                 <section class="container">
@@ -197,7 +196,6 @@
                             </form>
                         </div>
                     </div>
-
 
 
                     <div class="row">
@@ -334,25 +332,27 @@
                     <button class="btn btn-primary" id="btnSaveCustomer">Save</button>
                     <button class="btn btn-success" id="btnUpdateCustomer">Update</button>
                     <button class="btn btn-danger" id="btnDeleteCustomer">Delete</button>
-                    </div>
+                </div>
             </div>
             <div class="col-12 col-md-5">
-                <div class="mb-3">
-                    <label class="form-label" for="txtCusID">Customer ID</label>
-                    <input class="form-control" id="txtCusID" placeholder="Customer ID" type="text">
-                </div>
-                <div class="mb-3">
-                    <label class="form-label" for="txtCusName">Customer Name</label>
-                    <input class="form-control" id="txtCusName" placeholder="Customer Name" type="text">
-                </div>
-                <div class="mb-3">
-                    <label class="form-label" for="txtCusAddress">Customer Address</label>
-                    <input class="form-control" id="txtCusAddress" placeholder="Customer Address" type="text">
-                </div>
-                <div class="mb-3">
-                    <label class="form-label" for="txtCusSalary">Customer Salary</label>
-                    <input class="form-control" id="txtCusSalary" placeholder="Customer Salary" type="text">
-                </div>
+                <form id="customerForm">
+                    <div class="mb-3">
+                        <label class="form-label" for="txtCusID">Customer ID</label>
+                        <input class="form-control" id="txtCusID" placeholder="Customer ID" type="text">
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label" for="txtCusName">Customer Name</label>
+                        <input class="form-control" id="txtCusName" placeholder="Customer Name" type="text">
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label" for="txtCusAddress">Customer Address</label>
+                        <input class="form-control" id="txtCusAddress" placeholder="Customer Address" type="text">
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label" for="txtCusSalary">Customer Salary</label>
+                        <input class="form-control" id="txtCusSalary" placeholder="Customer Salary" type="text">
+                    </div>
+                </form>
             </div>
         </section>
         <section class="row mt-4">
