--- a/web/index.html
+++ b/web/index.html
@@ -338,19 +338,19 @@
                 <form id="customerForm">
                     <div class="mb-3">
                         <label class="form-label" for="txtCusID">Customer ID</label>
-                        <input class="form-control" id="txtCusID" placeholder="Customer ID" type="text">
+                        <input class="form-control" id="txtCusID" placeholder="Customer ID" type="text" name="customerId">
                     </div>
                     <div class="mb-3">
                         <label class="form-label" for="txtCusName">Customer Name</label>
-                        <input class="form-control" id="txtCusName" placeholder="Customer Name" type="text">
+                        <input class="form-control" id="txtCusName" placeholder="Customer Name" type="text" name="customerName">
                     </div>
                     <div class="mb-3">
                         <label class="form-label" for="txtCusAddress">Customer Address</label>
-                        <input class="form-control" id="txtCusAddress" placeholder="Customer Address" type="text">
+                        <input class="form-control" id="txtCusAddress" placeholder="Customer Address" type="text" name="customerAddress">
                     </div>
                     <div class="mb-3">
                         <label class="form-label" for="txtCusSalary">Customer Salary</label>
-                        <input class="form-control" id="txtCusSalary" placeholder="Customer Salary" type="text">
+                        <input class="form-control" id="txtCusSalary" placeholder="Customer Salary" type="text" name="customerSalary">
                     </div>
                 </form>
             </div>
@@ -367,7 +367,6 @@
                     </tr>
                     </thead>
                     <tbody id="customerTable">
-
 
                     </tbody>
                 </table>
