--- a/web/index.html
+++ b/web/index.html
@@ -276,26 +276,28 @@
                 </div>
             </div>
             <div class="col-12 col-md-5">
-                <div class="mb-3">
-                    <label class="form-label" for="txtItemID">Item ID</label>
-                    <input class="form-control" id="txtItemID" placeholder="Item ID" type="text">
-                </div>
-                <div class="mb-3">
-                    <label class="form-label" for="txtItemName">Item Name</label>
-                    <input class="form-control" id="txtItemName" placeholder="Item Name" type="text">
-                </div>
-                <div class="mb-3">
-                    <label class="form-label" for="txtItemDescription">Item Description</label>
-                    <input class="form-control" id="txtItemDescription" placeholder="Item Description" type="text">
-                </div>
-                <div class="mb-3">
-                    <label class="form-label" for="txtItemQTY">QTY</label>
-                    <input class="form-control" id="txtItemQTY" placeholder="Item QTY" type="text">
-                </div>
-                <div class="mb-3">
-                    <label class="form-label" for="txtItemPrice">Price</label>
-                    <input class="form-control" id="txtItemPrice" placeholder="Item Price" type="text">
-                </div>
+                <form id="itemForm">
+                    <div class="mb-3">
+                        <label class="form-label" for="txtItemID">Item ID</label>
+                        <input class="form-control" id="txtItemID" placeholder="Item ID" type="text" name="itemId">
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label" for="txtItemName">Item Name</label>
+                        <input class="form-control" id="txtItemName" placeholder="Item Name" type="text" name="itemName">
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label" for="txtItemDescription">Item Description</label>
+                        <input class="form-control" id="txtItemDescription" placeholder="Item Description" type="text" name="itemDescription">
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label" for="txtItemQTY">QTY</label>
+                        <input class="form-control" id="txtItemQTY" placeholder="Item QTY" type="text" name="itemQTY">
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label" for="txtItemPrice">Price</label>
+                        <input class="form-control" id="txtItemPrice" placeholder="Item Price" type="text" name="itemPrice">
+                    </div>
+                </form>
             </div>
         </section>
         <section class="row mt-4">
@@ -338,19 +340,23 @@
                 <form id="customerForm">
                     <div class="mb-3">
                         <label class="form-label" for="txtCusID">Customer ID</label>
-                        <input class="form-control" id="txtCusID" placeholder="Customer ID" type="text" name="customerId">
+                        <input class="form-control" id="txtCusID" name="customerId" placeholder="Customer ID"
+                               type="text">
                     </div>
                     <div class="mb-3">
                         <label class="form-label" for="txtCusName">Customer Name</label>
-                        <input class="form-control" id="txtCusName" placeholder="Customer Name" type="text" name="customerName">
+                        <input class="form-control" id="txtCusName" name="customerName" placeholder="Customer Name"
+                               type="text">
                     </div>
                     <div class="mb-3">
                         <label class="form-label" for="txtCusAddress">Customer Address</label>
-                        <input class="form-control" id="txtCusAddress" placeholder="Customer Address" type="text" name="customerAddress">
+                        <input class="form-control" id="txtCusAddress" name="customerAddress" placeholder="Customer Address"
+                               type="text">
                     </div>
                     <div class="mb-3">
                         <label class="form-label" for="txtCusSalary">Customer Salary</label>
-                        <input class="form-control" id="txtCusSalary" placeholder="Customer Salary" type="text" name="customerSalary">
+                        <input class="form-control" id="txtCusSalary" name="customerSalary" placeholder="Customer Salary"
+                               type="text">
                     </div>
                 </form>
             </div>
@@ -379,5 +385,6 @@
 <script src="assets/js/jquery-3.6.0.min.js"></script>
 <script src="assets/js/script.js"></script>
 <script src="assets/js/customerScript.js"></script>
+<script src="assets/js/itemController.js"></script>
 </body>
 </html>
